tests/corpus/pass/phase1/246_borrow_return.gw
fn pick(a: &i32, b: &i32) -> &i32 {
    return a;
}

fn main() -> i32 {
    let x: i32 = 10;
    let y: i32 = 20;
    let r: &i32 = pick(&x, &y);
    return *r;
}
